[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "opr"
description = "Object Programming Runtime"
version = "222"
authors = [
    {name = "Bart Thate", email = "programmingobject@gmail.com" },
]
readme = "README.rst"
license = { text="Public Domain"}
classifiers = [ 
               'Development Status :: 3 - Alpha',
               'License :: Public Domain',
               'Operating System :: Unix',
               'Programming Language :: Python',
               'Topic :: Utilities'
              ]


[script-files]
"opr" = "bin/opr"


[project.urls]
"home" = "https://pypi.org/project/opr"
"bugs" = "https://github.com/bthate/opr/issues"
"source" = "https://github.com/bthate/opr"


[project.optional-dependencies]
dev = []


[tool.setuptools.packages.find]
where = ["."]
include = ["opr*",]
exclude = ["tests*",]
namespaces = false
